环境编译 问题~~ 把svg相关删掉 npm run build就OK了

--- a/src/components/OrderList/Item/style.less
+++ b/src/components/OrderList/Item/style.less
@@ -24,16 +24,47 @@
       border: 0;
       font-size: 16px;
     }
+
+    .unselected-btn {
+      background-color: #999;
+    }
   }
 
   .order-item-content {
     margin: 0 130px;
+
+    strong{
+      color:#db2312;
+      font-size: 18px;
+      display: block;
+      text-align: left;
+      line-height:1.5;
+    }
 
     span {
       color: #666;
       display: block;
       text-align: left;
       line-height: 1.5;
+    }    
+  }  
+  
+  .comment-text-container {
+    margin-top: 20px;
+  
+    button {
+      width: 80px;
+      text-align: center;
+      background-color: rgb(233, 32, 61);
+      color: #fff;
+      padding: 5px 0;
+      margin-top:10px;
+      border: 0;
+      font-size: 16px;
+    }
+
+    .unselected-btn {
+      background-color: #999;
     }
   }
 }
